[project]
name = "things-cli"
version = "0.1.0"
description = "A command-line interface for Things 3 using the Things URL scheme"
authors = [
    { name = "Sebastian Kempken" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
things = "things:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["things.py", "things_jxa.py"]

[tool.uv]
dev-dependencies = []
